fix: content flickering on select element

--- a/src/app/components/element-container/element-container.component.scss
+++ b/src/app/components/element-container/element-container.component.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  padding: 2px;
   position: absolute;
   cursor: grab;
 
